tests/frost/fail/b7.mle
type list a = Nil | Cons of a, list a

val head : forall a . list a -> a
val map : forall a b . (a -> b) -> list a -> list b
val ids : list (forall a . a -> a)
val single : forall a . a -> list a

let infer = map head (single ids)
